[sy] security: cycle 36

--- a/sr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sr/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Сертификат је потпи
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Сервер користи key pinning (HPKP) али ниједан сертификат од поверења није могао бити изграђен тако да одговара овом pinset-у. Key pinning прекршаји се не могу превазићи.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Сервер користи сертификат са основним ограничењима екстензије да би га идентификовао као сертификационо тело. Ово не би требао бити случај за правилно издате сертификате.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Сервер је представио сертификат са величином кључа која је сувише мала да би се успоставила безбедна веза.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Верзија 1 X.509 сертификата који није од поверења је коришћен за издавање серверског сертификата. Верзије 1 X.509 сертификата су застареле и неби требале да се користе за потписивање других сертификата.
