--- a/sr/security/manager/chrome/pippki/pippki.properties
+++ b/sr/security/manager/chrome/pippki/pippki.properties
@@ -75,16 +75,12 @@ pageInfo_Privacy_None2=Податак који се преноси преко и
 pageInfo_Privacy_None3=Страница коју гледате није шифрована.
 # LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Шифрована веза: шифровање високог нивоа ((%1$S, %2$S-битни кључ)
-pageInfo_Privacy_Strong1=Страница коју гледате је шифрована пре слања преко интернета.
-pageInfo_Privacy_Strong2=Шифровање отежава неовлашћен преглед података који се размењују између рачунара. Стога је врло мало вероватно да неко може да прочита ову страну у путу кроз мрежу.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Шифрована веза: шифровање ниског нивоа ((%1$S, %2$S-битни кључеви)
-pageInfo_Privacy_Weak1=Веб сајт %S користи шифровање ниског квалитета за страницу коју читате.
-pageInfo_Privacy_Weak2=Слабо шифровање омогућава неовлашћеним људима да виде ове податке.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Шифрована веза (%1$S, %2$S битни кључ, %3$S)
+pageInfo_Privacy_Encrypted1=Страница коју гледате је шифрована пре слања преко интернета.
+pageInfo_Privacy_Encrypted2=Шифровање отежава неовлашћен преглед података који се размењују између рачунара. Стога је врло мало вероватно да неко може да прочита ову страницу док путује кроз мрежу.
 pageInfo_MixedContent=Веза је делимично шифрована
-pageInfo_Privacy_Mixed1=Делови странице коју прегледате није шифрован пре слања преко интернета.
+pageInfo_Privacy_Broken1=Делови странице коју прегледавате нису шифровани или шифровање није довољно јако пре слања преко интернета.
 
 #Cert Viewer
 certDetails=Прегледач сертификата:
@@ -151,17 +147,17 @@ writeFileUnknownError=Непозната грешка
 addExceptionBrandedWarning2=Само што нисте преиначили механизам за идентификацију сајта за програм %S.
 addExceptionInvalidHeader=Сајт покушава да се представи помоћу неважећих информација.
 addExceptionDomainMismatchShort=Погрешан сајт
-addExceptionDomainMismatchLong=Сертификат припада другом сајту, то може да указује на крађу идентитета.
+addExceptionDomainMismatchLong2=Сертификат припада другом сајту, то може да указује на покушај имитирања сајта.
 addExceptionExpiredShort=Застарели подаци
-addExceptionExpiredLong=Сертификат је тренутно неважећи.  Није могуће проверити да ли је овај идентитет пријављен као украден или изгубљен.
+addExceptionExpiredLong2=Сертификат је тренутно неважећи. Могуће да је украден или изгубљен и неко може да имитира овај сајт.
 addExceptionUnverifiedOrBadSignatureShort=Непознат идентитет
-addExceptionUnverifiedOrBadSignatureLong=Сертификату се не може веровати, зато што још није верификован од стране компаније за издавање сертификата.
+addExceptionUnverifiedOrBadSignatureLong2=Сертификату се не може веровати, зато што још није верификован од стране сертификационог тела.
 addExceptionValidShort=Важећи сертификат
 addExceptionValidLong=Сајт је дао важећи, проверени сертификат.  Нема потребе да додајете изузетак.
 addExceptionCheckingShort=Провера података
-addExceptionCheckingLong=Покушај да се идентификује сајт…
+addExceptionCheckingLong2=Покушај да се идентификује сајт…
 addExceptionNoCertShort=Нема доступних података
-addExceptionNoCertLong=Није могуће добавити статус о идентитету наведеног сајта.
+addExceptionNoCertLong2=Није могуће добавити статус о идентитету наведеног сајта.
 addExceptionConnectionFailed=Веза је прекинута
 
 #Certificate Exists in database
