[sy] toolkit: cycle 36

--- a/sr/toolkit/chrome/global/aboutSupport.properties
+++ b/sr/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = WebGL растеризација
 
 minLibVersions = Очекивано минимално издање
 loadedLibVersions = Издање у употреби
+
+hasSeccompBPF = Seccomp-BPF (Системско филтрирање позива)
+canSandboxContent = Sandboxing процеса садржаја
+canSandboxMedia = Sandboxing медија прикључак
