[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -294,7 +294,7 @@ identity.identified.verified_by_you=شما برای این وب‌گاه یک ا
 identity.identified.state_and_country=%S، %S
 
 identity.encrypted2=اتصال شما به این سایت امن است.
-identity.mixed_display_loaded=اتصال به این وبسایت کاملا امن نیست زیرا حاوی عناصررمزنگاری نشده است (مثل تصاویر).
+identity.broken_loaded=اتصال به این وبسایت کاملاً امن نیست به دلیل این که حاوی اطلاعات رمزنگاری نشده است (مانند تصاویر) و یا اینکه رمزنگاری کاملاً مطمئن نیست.
 identity.mixed_active_loaded2=این وبسایت محتویات تعاملی دارد که رمزنگاری نشده است (مانند اسکریپت ها). افراد دیگر میتوانند اطلاعات شما را ببینند یا رفتار وبسایت را تغییر دهند.
 identity.unencrypted=اتصال شما به این وب‌گاه رمزنگاری نشده است.
 
