--- a/fa/browser/chrome/browser/shellservice.properties
+++ b/fa/browser/chrome/browser/shellservice.properties
@@ -12,6 +12,12 @@ setDefaultBrowserOptions.accesskey = گ
 setDefaultBrowserNever.label       = دیگر پرسیده نشود
 setDefaultBrowserNever.accesskey   = د
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=مرورگر پیش‌فرض
+setDefaultBrowserMessage=در حال حاضر %S مرورگر پیش‌فرض شما نیست. آیا می‌خواهید آن را مرورگر پیش‌فرض خود کنید؟
+setDefaultBrowserDontAsk=همیشه در آغاز %S این بررسی انجام شود.
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=ذخیرهٔ تصویر…
