--- a/fa/security/manager/chrome/pippki/pippki.properties
+++ b/fa/security/manager/chrome/pippki/pippki.properties
@@ -71,18 +71,11 @@ pageInfo_NoEncryption=اتصال رمزنگاری نشده است
 pageInfo_Privacy_None1=وب‌گاه ‎%S برای صفحه‌ای که در حال بازدید آن هستید از رمزنگاری پشتیبانی نمی‌کند.
 pageInfo_Privacy_None2=دیگران می‌توانند اطلاعاتی را که بدون رمزنگاری از طریق اینترنت ارسال شود در حال مخابره ببینند.\u0020
 pageInfo_Privacy_None3=صفحه‌ای که در حال بازدید از آن هستید رمزنگاری نشده است.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=اتصال رمزنگاری شده: رمزنگاره رده بالا  (کلید %1$S، %2$S بیتی)
-pageInfo_Privacy_Strong1=صفحه‌ای که در حال بازدید از آن هستید پیش از مخابره از طریق اینترنت، رمزنگاری شده است.
-pageInfo_Privacy_Strong2=رمزنگاری نمایش اطلاعات در حال انتقالب بین رایانه‌ها را برای افرادی که اجازهٔ این کار را ندارند بسیار مشکل می‌کند. بنابراین احتمال این که کسی این صفحه را در حال انتقال در شبکه خوانده باشد بسیار کم است.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=اتصال رمزنگاری شده: رمزنگاری رده پایین (کلید %1$S، %2$S بیتی)
-pageInfo_Privacy_Weak1=وب‌گاه ‎%S برای صفحه‌ای که در حال بازدید از آن هستید از رمزنگاری رده پایین استفاده می‌کند.
-pageInfo_Privacy_Weak2=بعضی افراد بدون اجازه ممکن است با وجود رمزنگاری رده پایین بتوانند این اطلاعات را ببینند.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=صفحه‌ای که در حال بازدید از آن هستید پیش از مخابره از طریق اینترنت، رمزنگاری شده است.
 pageInfo_MixedContent=اتصال به طور جزئی رمزنگاری شده است
-pageInfo_Privacy_Mixed1=بخش‌هایی از صفحه‌ای که در حال بازدید از آن هستید پیش از مخابره از طریق اینترنت، رمزنگاری نشده است.
 
 #Cert Viewer
 certDetails=نمایش‌دهندهٔ گواهی:
@@ -149,15 +142,11 @@ writeFileUnknownError=خطای نامعلوم
 addExceptionBrandedWarning2=شما در حال تغییر روشی هستید که %S توسط آن این پایگاه را می‌شناسد.
 addExceptionInvalidHeader=این پایگاه در حال شناساندن خود با استفاده از اطلاعات نادرست است.
 addExceptionDomainMismatchShort=پایگاه نادرست
-addExceptionDomainMismatchLong=گواهی مربوط به پایگاه دیگری است، که این احتمال دارد یک دزدی هویت باشد.
 addExceptionExpiredShort=اطلاعات کهنه
-addExceptionExpiredLong=گواهی در حال حاضر معتبر نیست.  بررسی این که آیا گزارش دزدیده یا مفقود شدن این گواهی ارائه شده است امکان ندارد.
 addExceptionValidShort=گواهی معتبر
 addExceptionValidLong=گواهی ارائه شده توسط این پایگاه معتبر و تأیید شده است.  نیازی به افزودن استثنا برای این پایگاه وجود ندارد.
 addExceptionCheckingShort=در حال وارسی اطلاعات
-addExceptionCheckingLong=تلاش برای شناسایی پایگاه…
 addExceptionNoCertShort=هیچ اطلاعاتی وجود ندارد
-addExceptionNoCertLong=تعیین وضعیت شناسایی این پایگاه ممکن نبود.
 addExceptionConnectionFailed=برقراری اتصال با شکست مواجه شد
 
 #Certificate Exists in database
