--- a/fa/toolkit/chrome/global/aboutTelemetry.properties
+++ b/fa/toolkit/chrome/global/aboutTelemetry.properties
@@ -6,6 +6,9 @@
 # - %1$S will be replaced by brandFullName
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 
+generalDataHeadingName = نام
+
+
 
 
 
@@ -29,7 +32,6 @@ histogramCopy = رونوشت برداشتن
 
 
 
-valuesHeader = مقدار
 
 
 addonTableDetails = جزئیات
