--- a/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fa/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -90,6 +90,8 @@ quit-button.tooltiptext.linux2 = خروج %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
 
 
 panic-button.label = فراموش کردن
@@ -99,3 +101,4 @@ web-apps-button.label = برنامه‌ها
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+# %S is the keyboard shortcut
