--- a/fa/browser/chrome/browser/devtools/webide.properties
+++ b/fa/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,7 @@ project_tab_loading=در حال بار کردن…
 
 # Variable: error message (in english)
 
+
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -30,3 +31,5 @@ addons_status_installed=نصب شد
 
 
 # Validation status
+
+# Preferences
