--- a/fa/dom/chrome/dom/dom.properties
+++ b/fa/dom/chrome/dom/dom.properties
@@ -104,3 +104,4 @@ UseOfReleaseEventsWarning=استفاده از releaseEvents() منسوخ شده 
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
