--- a/hr/security/manager/chrome/pippki/pippki.properties
+++ b/hr/security/manager/chrome/pippki/pippki.properties
@@ -80,6 +80,7 @@ pageInfo_EncryptionWithBitsAndProtocol=Veza kriptirana (%1$S, %2$S bitni ključe
 pageInfo_Privacy_Encrypted1=Stranica koju pregledavate je šifrirana prije slanja putem Interneta.
 pageInfo_Privacy_Encrypted2=Kriptiranje neovlaštenim osobama otežava pregledavanje informacija koje putuju između računala. Stoga je mala vjerojatnost da je netko pročitao ovu stranicu dok je putovala mrežom.
 pageInfo_MixedContent=Djelomično šifrirana veza
+pageInfo_Privacy_Broken1=Dijelovi stranice koju gledate nisu kriptirani, ili kriptiranje nije dovoljno jako, prije slanja putem Interneta.
 
 #Cert Viewer
 certDetails=Preglednik certifikata:
@@ -146,12 +147,17 @@ writeFileUnknownError=Nepoznata greška
 addExceptionBrandedWarning2=Promijeniti ćete na način na koji %S identificira ovu stranicu.
 addExceptionInvalidHeader=Ova se stranica pokušava identificirati s neispravnim informacijama.
 addExceptionDomainMismatchShort=Pogrešna stranica
+addExceptionDomainMismatchLong2=Certifikat pripada drugoj stranici, što može značiti da netko pokušava krivotvoriti ovu stranicu.
 addExceptionExpiredShort=Zastarjela informacija
+addExceptionExpiredLong2=Certifikat trenutno nije ispravan. Možda je ukraden ili izgubljen, i može biti upotrebljen za krivotvorenje ove stranice.
 addExceptionUnverifiedOrBadSignatureShort=Nepoznat identitet
+addExceptionUnverifiedOrBadSignatureLong2=Certifikat nije pouzdan jer nije potvrđen kao izdan od priznate agencije koristeći sigurni potpis.
 addExceptionValidShort=Ispravan certifikat
 addExceptionValidLong=Ova stranica pruža ispravnu, potvrđenu identifikaciju. Nema potrebe za dodavanjem iznimke.
 addExceptionCheckingShort=Provjera informacija
+addExceptionCheckingLong2=Pokušaj identificiranja stranice…
 addExceptionNoCertShort=Nema dostupnih informacija
+addExceptionNoCertLong2=Nije moguće dobiti identifikacijski status za ovu stranicu.
 addExceptionConnectionFailed=Veza nije uspjela
 
 #Certificate Exists in database
