--- a/sr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,10 @@ quit-button.tooltiptext.linux2 = Изађи %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Изађи %1$S (%2$S)
 
-loop-call-button2.label = Започни разговор
-loop-call-button2.tooltiptext = Започни разговор
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Започни разговор
 
 social-share-button.label = Подели ову страницу
 social-share-button.tooltiptext = Подели ову страницу
@@ -111,5 +113,6 @@ web-apps-button.tooltiptext = Откриј апликације
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Open WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Open WebIDE (%S)
