[sy] browser: cycle 36 (part II)

--- a/sr/browser/chrome/browser/shellservice.properties
+++ b/sr/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = Н
 setDefaultBrowserNever.label       = Немој ме поново питати
 setDefaultBrowserNever.accesskey   = п
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Подразумевани прегледач
+setDefaultBrowserMessage=%S тренутно није Ваш подразумевани прегледач. Да ли желите да га учините Вашим подразумеваним прегледачем?
+setDefaultBrowserDontAsk=Увек изврши ову проверу кад се %S покреће.
 
 desktopBackgroundLeafNameWin=Позадина радне површине.bmp
 DesktopBackgroundDownloading=Чување слике…
