--- a/ja/mobile/android/chrome/webapp.properties
+++ b/ja/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 個のアップデートに失敗しました
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=%1$S のアップデートを取得するのに失敗しました
 
-webappsDisabledInGuest=ゲストセッションではアプリをインストールすることはできません
+webappsDisabled=アプリをインストールすることはできません
