--- a/ja-JP-mac/mobile/android/chrome/browser.properties
+++ b/ja-JP-mac/mobile/android/chrome/browser.properties
@@ -327,6 +327,10 @@ remoteNotificationGenericName=アプリ
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=%S 番ポートを使用しています
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=%S のデバッグを有効にする
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=リモートデバッガを有効にするにはタッチしてください
 
 # Helper apps
 helperapps.open=開く
