A fem minor corrections for /browser/chrome/browser/loop/loop.properties

--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -269,7 +269,7 @@ powered_by_beforeLogo=Powered by
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Hvordan var din samtale?
-feedback_what_makes_you_sad=Hvad gør dig bedrøvet?
+feedback_what_makes_you_sad=Hvad er du utilfreds med?
 feedback_thank_you_heading=Tak for din feedback!
 feedback_category_audio_quality=Lydkvaliteten
 feedback_category_video_quality=Videokvaliteten
@@ -277,7 +277,7 @@ feedback_category_was_disconnected=Samtalen blev afbrudt
 feedback_category_confusing=Brugerfladen er forvirrende
 feedback_category_other=Andet:
 feedback_custom_category_text_placeholder=Beskriv, hvad der gik galt
-feedback_submit_button=Indsend
+feedback_submit_button=Send
 feedback_back_button=Tilbage
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
@@ -318,4 +318,4 @@ rooms_room_full_label=Der er allerede to personer i denne samtale
 rooms_room_full_call_to_action_nonFx_label=Hent {{brandShortname}} for at starte din egen
 rooms_room_full_call_to_action_label=Læs mere om {{clientShortname}} »
 rooms_room_joined_label=Nogen har sluttet sig til samtalen
-rooms_room_join_label=Deltag i samtalen
+rooms_room_join_label=Vær med i samtalen
