[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -508,6 +508,7 @@ getUserMedia.selectScreen.accesskey=ص
 getUserMedia.selectApplication.label=برنامه برای به‌اشتراک‌گذاری‌:
 getUserMedia.selectApplication.accesskey=ب
 getUserMedia.noVideo.label = بدون فیلم
+getUserMedia.noApplication.label = بدون برنامه
 getUserMedia.noScreen.label = بدون صفحه نمایش
 getUserMedia.noAudio.label = بدون صدا
 getUserMedia.shareEntireScreen.label = تمام صفحه
