[sv-SE] update from Pootle (mobile)

--- a/sv-SE/browser/chrome/browser/devtools/webide.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webide.properties
@@ -20,7 +20,6 @@ importHostedApp_title=Öppna app på webben
 importHostedApp_header=Ange Manifest URL
 
 notification_showTroubleShooting_label=Felsökning
-notification_showTroubleShooting_accesskey=t
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -41,6 +40,7 @@ error_cantConnectToApp=Kan inte ansluta till app: %1$S
 
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Kan inte hämta tilläggslistan: %S
+
 
 addons_stable=stabil
 addons_unstable=ostabil
@@ -71,3 +71,5 @@ status_valid=VALID (Giltig)
 status_warning=WARNINGS (Varningar)
 status_error=ERRORS (Fel)
 status_unknown=OKÄND
+
+# Preferences
