--- a/sv-SE/toolkit/chrome/global/aboutTelemetry.properties
+++ b/sv-SE/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Den här sidan visar information om prestanda, hårdvara, användning och anpassningar insamlad av telemetri. Den här informationen skickas till %1$S för att hjälpa till att förbättra %2$S.
 
+generalDataHeadingName = Namn
+
+
 slowSqlMain = Långsamma SQL-satser på Main-tråden
 
 slowSqlOther = Långsamma SQL-satser på Helper-trådar
@@ -46,7 +49,6 @@ enableTelemetry = Aktivera telemetri
 
 keysHeader = Egenskap
 
-valuesHeader = Värde
 
 addonTableID = Tillägg-ID
 
