--- a/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,11 +97,9 @@ quit-button.tooltiptext.linux2 = Avsluta %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Avsluta %1$S (%2$S)
 
-loop-call-button2.label = Starta en konversation
-loop-call-button2.tooltiptext = Starta en konversation
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
 
-social-share-button.label = Dela den här sidan
-social-share-button.tooltiptext = Dela den här sidan
 
 panic-button.label = Glöm
 panic-button.tooltiptext = Glöm viss webbläsarhistorik
@@ -111,5 +109,5 @@ web-apps-button.tooltiptext = Upptäck Appar
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Öppna WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
