--- a/sv-SE/browser/chrome/browser/shellservice.properties
+++ b/sv-SE/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = I
 setDefaultBrowserNever.label       = Fråga mig inte igen
 setDefaultBrowserNever.accesskey   = F
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Standardwebbläsare
+setDefaultBrowserMessage=%S används inte som standardwebbläsare. Vill du göra den till standardwebbläsare?
+setDefaultBrowserDontAsk=Utför alltid den här kontrollen när %S startas.
 
 desktopBackgroundLeafNameWin=Firefox-bakgrund.bmp
 DesktopBackgroundDownloading=Sparar bild…
