--- a/sv-SE/security/manager/chrome/pippki/pippki.properties
+++ b/sv-SE/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,11 @@ pageInfo_NoEncryption=Anslutningen är ej krypterad
 pageInfo_Privacy_None1=Webbplatsen %S stöder inte kryptering av sidan som visas.
 pageInfo_Privacy_None2=Information som skickas över Internet utan kryptering kan under överföringen läsas av obehöriga personer.\u0020
 pageInfo_Privacy_None3=Sidan som visas är inte krypterad.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Anslutningen är krypterad: Höggradig kryptering (%1$S, %2$S bitars nyckel)
-pageInfo_Privacy_Strong1=Sidan som visas krypterades innan den skickades över Internet.
-pageInfo_Privacy_Strong2=Kryptering gör det mycket svårt för obehöriga personer att läsa information som skickas mellan datorer. Det är därför mycket osannolikt att någon läste denna information när den skickades över nätverket.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Anslutningen är krypterad: Låggradig kryptering (%1$S, %2$S bitars nyckel)
-pageInfo_Privacy_Weak1=Webbplatsen %S använder låggradig kryptering för sidan som visas.
-pageInfo_Privacy_Weak2=Låggradig kryptering kan medföra att obehöriga personer kan läsa informationen.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=Sidan som visas krypterades innan den skickades över Internet.
 pageInfo_MixedContent=Anslutningen är delvis krypterad
-pageInfo_Privacy_Mixed1=Delar av sidan som visas krypterades inte innan den skickades över Internet.
 
 #Cert Viewer
 certDetails=Certifikatvisaren:
@@ -151,17 +144,12 @@ writeFileUnknownError=Okänt fel
 addExceptionBrandedWarning2=Du håller på att åsidosätta sättet som %S identifierar den här platsen på.
 addExceptionInvalidHeader=Den här platsen försöker identifiera sig med ogiltig information.
 addExceptionDomainMismatchShort=Fel plats
-addExceptionDomainMismatchLong=Certifikatet hör till en annan plats, något som kan indikera en stöld av identitet.
 addExceptionExpiredShort=Föråldrad information
-addExceptionExpiredLong=Certifikatet är inte längre giltigt. Det är omöjligt att verifiera om denna identitet har anmälts som stulen eller förlorad.
 addExceptionUnverifiedOrBadSignatureShort=Okänd identitet
-addExceptionUnverifiedOrBadSignatureLong=Certifikatet är inte betrott eftersom det inte har verifierats av en erkänd utfärdare med hjälp av en säker signatur.
 addExceptionValidShort=Giltigt certifikat
 addExceptionValidLong=Platsen har presenterat en giltig och verifierad identifikation.  Du behöver inte lägga till något undantag.
 addExceptionCheckingShort=Kontrollerar information
-addExceptionCheckingLong=Försöker identifiera platsen…
 addExceptionNoCertShort=Ingen information tillgänglig
-addExceptionNoCertLong=Kunde inte erhålla någon identifikationsstatus för den angivna platsen.
 addExceptionConnectionFailed=Anslutningen misslyckades
 
 #Certificate Exists in database
