[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/devtools/timeline.properties
+++ b/sv-SE/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=POSTER
 timeline.label.styles=Stilar
 timeline.label.reflow=Återflöden
 timeline.label.paint=Måla
+timeline.label.javascript=Javascript
 timeline.label.domevent=DOM händelse
 timeline.label.consoleTime=Konsol
 
@@ -56,3 +57,9 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Starta:
+timeline.markerDetail.end=Slut:
+timeline.markerDetail.duration=Längd:
+timeline.markerDetail.DOMEventType=Händelsetyp:
+timeline.markerDetail.DOMEventPhase=Fas:
+timeline.markerDetail.DOMEventTargetPhase=Mål
+timeline.markerDetail.DOMEventCapturingPhase=Fånga
