--- a/sv-SE/browser/chrome/browser/devtools/webide.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webide.properties
@@ -20,6 +20,7 @@ importHostedApp_title=Öppna app på webben
 importHostedApp_header=Ange Manifest URL
 
 notification_showTroubleShooting_label=Felsökning
+notification_showTroubleShooting_accesskey=T
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
