--- a/sv-SE/browser/chrome/browser/downloads/downloads.properties
+++ b/sv-SE/browser/chrome/browser/downloads/downloads.properties
@@ -59,7 +59,7 @@ blockedUncommon=Den här filen kan vara farlig att öppna
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 unblockHeader=Är du säker på att du vill göra den här filen åtkomlig?
 unblockTypeMalware=Den här filen innehåller ett virus eller annat farligt program som kan skada din dator.\u0020
-unblockTypePotentiallyUnwanted=Denna fil, förkläld som en hjälsam nedladdning, kommer att göra oväntade föndringar till dina program och inställningar
+unblockTypePotentiallyUnwanted=Denna fil, förklädd till en hjälpsam nedladdning, kommer att göra oväntade ändringar i dina program och inställningar.
 unblockTypeUncommon=Denna fil har laddats ner från en okänd och möjligtvis farlig hemsida och kan vara skadlig för din dator att öppna.
 unblockTip=Du kan söka efter en alternativ nedladdningskälla, eller försöka ladda ner filen senare.
 unblockButtonContinue=Blockera inte ändå
