--- a/sv-SE/browser/chrome/browser/places/places.properties
+++ b/sv-SE/browser/chrome/browser/places/places.properties
@@ -15,7 +15,7 @@ bookmarksRestoreTitle=Välj en säkerhetskopia på bokmärken
 bookmarksRestoreFilterName=JSON
 
 bookmarksRestoreFormatError=Filtypen stöds inte.
-bookmarksRestoreParseError=Kan inte bearbeta säkerhetskopiefilen.
+bookmarksRestoreParseError=Kan inte bearbeta säkerhetskopieringsfilen.
 
 bookmarksLivemarkLoading=Aktiva bokmärket laddas…
 bookmarksLivemarkFailed=Aktiva bokmärkeskanalen kunde inte laddas.
