--- a/sv-SE/dom/chrome/dom/dom.properties
+++ b/sv-SE/dom/chrome/dom/dom.properties
@@ -210,3 +210,4 @@ KeyNameDeadKeysWarning=KeyboardEvent.key-värden som börjar med "Dead" är för
 ImportXULIntoContentWarning=Att importera XUL-noder till ett innehållsdokument är förlegat. Denna funktionalitet kan komma tas bort inom kort.
 XMLDocumentLoadPrincipalMismatch=Användning av document.load är förbjudet på dokument som kommer från andra fönster. Endast fönster i vilket ett dokument skapades tillåts anropa .load på det dokument. Använd hellre XMLHttpRequest istället.\u0020
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=En IndexedDB-transaktion som ännu inte var klar har avbrutits på grund av sidnavigering.
