--- a/sv-SE/dom/chrome/layout/css.properties
+++ b/sv-SE/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=mättnad
 PEColorLightnessEOF=ljusstyrka
 PEColorOpacityEOF=opacitet i färgvärde
 PEExpectedNumber=Väntade sig ett nummer, men fann ”%1$S”.
+PEPositionEOF=<position>
+PEExpectedPosition=Väntade sig en <position>, men fann '%1$S'.
+PEExpectedRadius=Förväntade sig en radie, men fann '%1$S'.
 PEExpectedCloseParen=Väntade sig ”)”, men fann ”%1$S”.
 PEDeclEndEOF=”;” eller ”}” för att avsluta deklaration
 PEParseDeclarationNoColon=Väntade sig ”:”, men fann ”%1$S”.
