--- a/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sv-SE/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -100,6 +100,8 @@ quit-button.tooltiptext.mac = Avsluta %1$S (%2$S)
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
 
+social-share-button.label = Dela den här sidan
+social-share-button.tooltiptext = Dela den här sidan
 
 panic-button.label = Glöm
 panic-button.tooltiptext = Glöm viss webbläsarhistorik
@@ -111,3 +113,4 @@ web-apps-button.tooltiptext = Upptäck Appar
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Öppna WebIDE (%S)
