[ta] update from Pootle (firefox)

--- a/ta/security/manager/chrome/pippki/pippki.properties
+++ b/ta/security/manager/chrome/pippki/pippki.properties
@@ -146,6 +146,7 @@ addExceptionInvalidHeader=This site attempts to identify  itself with invalid in
 addExceptionDomainMismatchShort=தவறான இணைய தளம்
 addExceptionExpiredShort=முடிவுற்ற தகவல்
 addExceptionUnverifiedOrBadSignatureShort=தெரியாத அடையாளம்
+addExceptionUnverifiedOrBadSignatureLong2=அடையாளம் காணப்படும் ஒரு அங்கீகரிப்பு ஆணையத்தால் உறுதிப்படுத்தப்படாததால், இந்த சான்றிதழ் நம்பகமானதல்ல.
 addExceptionValidShort=சரியான சான்றிதழ்
 addExceptionValidLong=இந்த இணைய தளம் சரியான, சரிபார்க்கப்பட்ட அடையாளத்தை கொடுக்கிறது. ஒரு விதிவிலக்கை சேர்க்க வேண்டாம்.
 addExceptionCheckingShort=தகவலை சோதிக்கிறது
