Bug 529697 - (CSP 1.1) Implement form-action directive [3/4],
Make the cspFrameAncestorsBlock error page generic and use it with the form-action directive too

--- a/pl/browser/chrome/overrides/appstrings.properties
+++ b/pl/browser/chrome/overrides/appstrings.properties
@@ -29,6 +29,6 @@ externalProtocolChkMsg=Zapamiętaj wybór dla wszystkich odnośników tego rodza
 externalProtocolLaunchBtn=Uruchom aplikację
 malwareBlocked=Witryna „%S” została zgłoszona jako witryna stanowiąca zagrożenie i została zablokowana zgodnie z ustawieniami bezpieczeństwa.
 phishingBlocked=Witryna „%S” została zgłoszona jako przypadek oszustwa mającego na celu wyłudzenie danych osobowych i informacji finansowych.
-cspFrameAncestorBlocked=Ta strona posiada politykę bezpieczeństwa treści, która nie pozwala na osadzenie jej w taki sposób.
+cspBlocked=Ta strona posiada politykę bezpieczeństwa treści, która nie pozwala na wczytanie jej w taki sposób.
 corruptedContentError=Strona, którą próbujesz obejrzeć, nie może być wyświetlona, ponieważ wykryto błąd w transmisji danych.
 remoteXUL=Ta strona wykorzystuje niewspieraną technologię, która nie jest już dostępna domyślnie w Firefoksie.
