--- a/pl/webapprt/webapprt/overrides/appstrings.properties
+++ b/pl/webapprt/webapprt/overrides/appstrings.properties
@@ -29,6 +29,6 @@ externalProtocolChkMsg=Zapamiętaj wybór dla wszystkich odnośników tego rodza
 externalProtocolLaunchBtn=Uruchom aplikację
 malwareBlocked=Witryna „%S” została zgłoszona jako witryna stanowiąca zagrożenie i została zablokowana zgodnie z ustawieniami bezpieczeństwa.
 phishingBlocked=Witryna „%S” została zgłoszona jako przypadek oszustwa mającego na celu wyłudzenie danych osobowych i informacji finansowych.
-cspFrameAncestorBlocked=Aplikacja próbowała uzyskać dostęp do zasobu posiadającego politykę bezpieczeństwa treści, która nie pozwala na osadzenie go w ten sposób.
+cspBlocked=Aplikacja próbowała uzyskać dostęp do zasobu posiadającego politykę bezpieczeństwa treści, która nie pozwala na wczytywanie go w ten sposób.
 corruptedContentError=Aplikacja nie może kontynuować wczytywania, ponieważ wykryto błąd w transmisji danych.
 remoteXUL=Aplikacja wykorzystuje nieobsługiwaną technologię, która nie jest dłużej dostępna.
