Bug 1083285 - Fix noisy IndexedDB error, replace with better warning

--- a/pl/dom/chrome/dom/dom.properties
+++ b/pl/dom/chrome/dom/dom.properties
@@ -173,3 +173,4 @@ KeyNameZoomWarning=Wartość „Zoom” własności „KeyboardEvent.key” jest
 KeyNameDeadKeysWarning=Wartości rozpoczynające się od „Dead” własności „KeyboardEvent.key” są przestarzałe i zostaną zastąpione pojedynczą wartością „Dead”. Więcej informacji: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importowanie węzłów XUL do treści dokumentu jest przestarzałe - funkcjonalność zostanie wkrótce usunięta.
 XMLDocumentLoadPrincipalMismatch=Użycie metody „document.load” jest zabronione dla dokumentów pochodzących z innych okien. Wyłącznie w oknie, w którym dokument został utworzony, można wykonać „.load” dla tego dokumentu. Zamiast tej metody, lepiej używać „XMLHttpRequest”.
+IndexedDBTransactionAbortNavigation=Nieukończona transakcja IndexedDB została przerwana przez nawigację.
