Bug 1074106 - [timeline] marker sidebar

--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -18,3 +18,12 @@ timeline.label.consoleTime=Konsola
 graphs.memory=MB
 
 timeline.markerDetailFormat=%1$S (%2$S)
+timeline.markerDetail.start=Początek:
+timeline.markerDetail.end=Koniec:
+timeline.markerDetail.duration=Czas trwania:
+timeline.markerDetail.consoleTimerName=Nazwa:
+timeline.markerDetail.DOMEventType=Typ zdarzenia:
+timeline.markerDetail.DOMEventPhase=Faza:
+timeline.markerDetail.DOMEventTargetPhase=target
+timeline.markerDetail.DOMEventCapturingPhase=capture
+timeline.markerDetail.DOMEventBubblingPhase=bubbling
