--- a/pl/browser/chrome/browser/search.properties
+++ b/pl/browser/chrome/browser/search.properties
@@ -2,8 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-searchtip=Szukaj w %S
-
+searchtip=Szukaj z %S
+searchPlaceholder=Szukaj
+searchHeader=Szukaj z %S
 cmd_pasteAndSearch=Wklej i szukaj
 
 cmd_clearHistory=Wyczyść historię wyszukiwania
