Kleinigheidjes in loop.prop

--- a/nl/browser/chrome/browser/loop/loop.properties
+++ b/nl/browser/chrome/browser/loop/loop.properties
@@ -14,7 +14,7 @@ first_time_experience_title={{clientShortname}} – Neem deel aan het gesprek
 first_time_experience_button_label=Beginnen
 
 share_link_header_text=Deel deze koppeling om iemand uit te nodigen voor een gesprek:
-invite_header_text=Iemand uitnodigen om deel te nemen.
+invite_header_text=Nodig iemand uit om deel te nemen.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -249,8 +249,8 @@ email_link_button=Koppeling e-mailen
 cancel_button=Annuleren
 
 cannot_start_call_session_not_ready=Kan gesprek niet beginnen, sessie is niet gereed.
-network_disconnected=De netwerkverbinding is abrupt verbroken.
-connection_error_see_console_notification=Gesprek mislukt; zie console voor details.
+network_disconnected=De netwerkverbinding is onverwacht beëindigd.
+connection_error_see_console_notification=Oproep mislukt; zie console voor details.
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
