[hy-AM] update from Pootle (thunderbird)

--- a/hy-AM/browser/chrome/browser/devtools/webide.properties
+++ b/hy-AM/browser/chrome/browser/devtools/webide.properties
@@ -25,6 +25,7 @@ project_tab_loading=Բեռնում...
 
 # Variable: error message (in english)
 
+
 addons_stable=աղյուսակ
 addons_unstable=անկայուն
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -42,3 +43,5 @@ runtimedetails_checkunkown=անհայտ
 
 # Validation status
 status_error=ՍԽԱԼՆԵՐ
+
+# Preferences
