--- a/hy-AM/browser/chrome/browser/shellservice.properties
+++ b/hy-AM/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = Ո
 setDefaultBrowserNever.label       = Այլևս չհարցնել
 setDefaultBrowserNever.accesskey   = Ա
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Հիմնական դիտարկիչը
+setDefaultBrowserMessage=%S-ը տվյալ պահին ձեր հիմնական դիտարկիչը չէ. Կցանկանայի՞ք այս ծրագիրը օգտագործել որպես հիմնական դիտարկիչ:
+setDefaultBrowserDontAsk=%S-ը գործարկելիս միշտ ստուգել:
 
 desktopBackgroundLeafNameWin=Աշխատանքային սեղանի միջավայրը՝ *.bmp
 DesktopBackgroundDownloading=Պահպանում եմ նկարը
