--- a/hy-AM/dom/chrome/dom/dom.properties
+++ b/hy-AM/dom/chrome/dom/dom.properties
@@ -209,3 +209,4 @@ KeyNameZoomWarning=KeyboardEvent.key "Zoom" արժեքը հնացել է և կա
 KeyNameDeadKeysWarning=KeyboardEvent.key արժեքը, որը սկսում է"Dead"-ով, հնացել է և կմիացվի միայն "Dead"-ով: Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=XUL հանգույցների ներմուծումը չի ողջունվում: Այն շուտով կհեռացվի:
 XMLDocumentLoadPrincipalMismatch=document.load-ի օգտագործումը արգելվել է այն փաստաթղթերից, որոնք գալիս են այլ պատուհաններից: Միայն այն պատուհանը, որտեղ փաստաթուղթը ստեղծվել է կարող է կանչել .load: Փոխարենը նախընտրելի է օգտագործել XMLHttpRequest-ը:
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
