--- a/hy-AM/toolkit/chrome/global/aboutTelemetry.properties
+++ b/hy-AM/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Այս էջում ցուցադրվում են տեղեկություններ արտադրողականության, սարքակազմի ծրագրի օգտագործման և կարգավորումների մասին, որոնք հավաքվում են Telemetry-ի միջոցով։ Այս տեղեկությունները կուղարկվեն %1$S-ին՝ լավարկելու համար %2$S-ը։
 
+generalDataHeadingName = Անուն
+
+
 slowSqlMain = Ցուցադրել SQL առաջարկությունները հիմնական հանգույցում
 
 slowSqlOther = Ցուցադրել SQL առաջարկությունները օգնության հանգույցում
@@ -46,7 +49,6 @@ enableTelemetry = Միացնել Telemetry-ին
 
 keysHeader = Հատկությունը
 
-valuesHeader = Արժեքը
 
 addonTableID = Հավելման ID-ին
 
