[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/browser/chrome/browser/devtools/webide.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webide.properties
@@ -20,7 +20,6 @@ importHostedApp_title=Abrir aplicativo hospedado
 importHostedApp_header=Forneça a URL do manifesto
 
 notification_showTroubleShooting_label=resolver o problema
-notification_showTroubleShooting_accesskey=r
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -41,6 +40,7 @@ error_cantConnectToApp=Não foi possível conectar-se ao aplicativo: %1$S
 
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Não foi possível receber a lista de aplicativos: %S
+
 
 addons_stable=estável
 addons_unstable=instável
@@ -71,3 +71,5 @@ status_valid=VÁLIDO
 status_warning=ALERTAS
 status_error=ERROS
 status_unknown=DESCONHECIDO
+
+# Preferences
