--- a/pt-BR/browser/chrome/browser/shellservice.properties
+++ b/pt-BR/browser/chrome/browser/shellservice.properties
@@ -13,6 +13,9 @@ setDefaultBrowserOptions.accesskey = O
 setDefaultBrowserNever.label       = Não perguntar de novo
 setDefaultBrowserNever.accesskey   = N
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
 
 desktopBackgroundLeafNameWin=Papel de parede.bmp
 DesktopBackgroundDownloading=Salvando imagem…
