--- a/pt-BR/security/manager/chrome/pippki/pippki.properties
+++ b/pt-BR/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,11 @@ pageInfo_NoEncryption=Conexão não criptografada
 pageInfo_Privacy_None1=O site %S não oferece criptografia para a página exibida.
 pageInfo_Privacy_None2=Informações não criptografadas estão sujeitas a interceptação durante a transmissão pela rede.
 pageInfo_Privacy_None3=A página exibida não foi criptografada.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Conexão criptografada: criptografia de nível alto (%1$S, chaves de %2$S bits)
-pageInfo_Privacy_Strong1=A página exibida foi criptografada antes ser transmitida pela internet.
-pageInfo_Privacy_Strong2=A criptografia torna muito difícil que pessoas não autorizadas compreendam informações transmitidas entre dois computadores. Portanto é muito improvável que alguém tenha interceptado esta página durante a transmissão pela rede.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Conexão criptografada: criptografia de nível baixo (%1$S, chaves de %2$S bits)
-pageInfo_Privacy_Weak1=O site %S transmitiu a página exibida utilizando uma criptografia de nível baixo.
-pageInfo_Privacy_Weak2=Uma criptografia de nível baixo pode permitir que pessoas não autorizadas interceptem estas informações.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=A página exibida foi criptografada antes ser transmitida pela internet.
 pageInfo_MixedContent=Conexão criptografada parcialmente
-pageInfo_Privacy_Mixed1=Partes da página exibida não foram criptografadas antes de serem transmitidas pela internet.
 
 #Cert Viewer
 certDetails=Visualizador de certificados:\u0020
@@ -151,17 +144,12 @@ writeFileUnknownError=Erro desconhecido
 addExceptionBrandedWarning2=Você irá substituir o modo como o %S identifica este site.
 addExceptionInvalidHeader=Este site tenta identificar-se com informação inválida.
 addExceptionDomainMismatchShort=Site incorreto
-addExceptionDomainMismatchLong=O certificado pertence a um site diferente, o que pode indicar roubo de identidade.
 addExceptionExpiredShort=Informação desatualizada
-addExceptionExpiredLong=O certificado não é válido no momento. Não é possível verificar se esta identidade foi reportada como roubada ou perdida.
 addExceptionUnverifiedOrBadSignatureShort=Identidade desconhecida
-addExceptionUnverifiedOrBadSignatureLong=O certificado não é considerado confiável porque não foi homologado por uma autoridade reconhecida usando uma assinatura segura.
 addExceptionValidShort=Certificado válido
 addExceptionValidLong=Este site fornece identificação válida e homologada. Não é necessário adicionar uma exceção.
 addExceptionCheckingShort=Verificando informações
-addExceptionCheckingLong=Tentando identificar o site…
 addExceptionNoCertShort=Nenhuma informação disponível
-addExceptionNoCertLong=Não é possível obter status de identificação para o site especificado.
 addExceptionConnectionFailed=Falha na conexão
 
 #Certificate Exists in database
