--- a/pt-BR/suite/chrome/branding/brand.properties
+++ b/pt-BR/suite/chrome/branding/brand.properties
@@ -7,6 +7,7 @@ brandShortName=SeaMonkey
 vendorShortName=SeaMonkey
 sidebarName=Painel
 extensions.getMoreThemesURL=https://%LOCALE%.add-ons.mozilla.org/%LOCALE%/%APP%/%VERSION%/themes/
+extensions.getPersonasURL=https://addons.mozilla.org/%LOCALE%/%APP%/themes/?sort=up-and-coming
 spellchecker.dictionaries.download.url=https://%LOCALE%.add-ons.mozilla.org/%LOCALE%/%APP%/%VERSION%/dictionaries/
 app.releaseNotesURL=http://www.seamonkey-project.org/releases/seamonkey%VERSION%/
 app.vendorURL=http://l10n.mozilla.org/pt-BR/seamonkeybr/
