--- a/pt-BR/browser/chrome/browser/devtools/gclicommands.properties
+++ b/pt-BR/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,9 @@ helpDesc=Ajuda para os comandos disponíveis
 # explain the contents of the command help table.
 helpAvailable=Comandos disponíveis
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Comandos para controlar o console
