[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/browser/navigator.properties
+++ b/pt-BR/suite/chrome/browser/navigator.properties
@@ -20,6 +20,9 @@ nothingAvailable=(Nada disponível)
 
 #nsBrowserStatusHandler.js
 # LOCALIZATION NOTE: %S is the security certifiate issuer
+securityButtonTooltipSecure=Assinado por %S
+securityButtonTooltipMixedContent=Aviso: Contém conteúdo não autenticado
+securityButtonTooltipInsecure=Exibe informações de segurança sobre a página atual
 
 # menu_close labels
 tabs.closeTab.label=Fechar aba
@@ -36,6 +39,7 @@ tabs.closeButton=Fechar
 tabs.closeWarningPromptMe=Sempre perguntar
 tabs.historyItem=Grupo de abas
 
+menuOpenAllInTabs.label=Abrir tudo em abas
 
 # urlbarBindings.xml
 # LOCALIZATION NOTE: This is for the location bar drop-down string:
@@ -45,8 +49,12 @@ tabs.historyItem=Grupo de abas
 searchFor=%S - Pesquisar na web: "%S"
 
 # Star button
+starButtonOn.tooltip=Editar este favorito
+starButtonOff.tooltip=&Adicionar esta página aos favoritos
 
 # Edit Bookmark UI
+editBookmarkPanel.pageBookmarkedDescription=O %S sempre lembrará desta página para você.
+editBookmarkPanel.bookmarkedRemovedTitle=Favorito excluído
 
 # LOCALIZATION NOTE (editBookmark.removeBookmarks.label)
 # Semi-colon list of plural forms. Replacement for #1 is
