[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/shellservice.properties
+++ b/es-MX/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = No volver a preguntar
 setDefaultBrowserNever.accesskey   = N
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Navegador predeterminado
+setDefaultBrowserMessage=%S no es tu navegador web predeterminado. ¿Quieres establecerlo como tal?
+setDefaultBrowserDontAsk=Comprobar esta configuración cada vez que se inicie %S.
 
 desktopBackgroundLeafNameWin=Fondo de escritorio.bmp
 DesktopBackgroundDownloading=Guardando imagen…
