--- a/es-MX/browser/chrome/browser/browser.properties
+++ b/es-MX/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=Has agregado una excepción de seguridad par
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=La conexión a este sitio web es segura.
-identity.mixed_display_loaded=La conexión a este sitio web no es totalmente segura porque contiene elementos sin encriptar (como imagenes).
+identity.broken_loaded=La conexión con este sitio web no es totalmente segura porque contiene elementos no cifrados (como imágenes) o el cifrado no es suficientemente fuerte.
 identity.mixed_active_loaded2=Este sitio web contiene contenido interactivo que no ha sido encriptado (tales como scripts). Otras personas pueden ver tu información o modificar la actividad del sitio web.
 identity.unencrypted=La transferencia de datos a este sitio web no está cifrada.
 
