--- a/es-MX/browser/chrome/browser/devtools/gclicommands.properties
+++ b/es-MX/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,9 @@ helpDesc=Ver ayuda para los comandos disponibles
 # explain the contents of the command help table.
 helpAvailable=Comandos disponibles
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Comandos para controlar la consola
