--- a/es-MX/browser/chrome/browser/devtools/webide.properties
+++ b/es-MX/browser/chrome/browser/devtools/webide.properties
@@ -20,7 +20,7 @@ importHostedApp_title=Abrir aplicación alojada
 importHostedApp_header=Introduce la URL del archivo manifest
 
 notification_showTroubleShooting_label=Resolución de problemas
-notification_showTroubleShooting_accesskey=t
+notification_showTroubleShooting_accesskey=T
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -42,6 +42,8 @@ error_cantConnectToApp=No se puede conectar a la aplicación: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=No se puede obtener la lista de complementos: %S
 
+error_appProjectsLoadFailed=No se puede cargar la lista de proyectos. Esto puede suceder si has usado este perfil con una versión más reciente de Firefox.
+
 addons_stable=estable
 addons_unstable=inestable
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S Simulador (%2$S)
 addons_install_button=instalar
 addons_uninstall_button=desinstalar
 addons_adb_label=Complemento del asistente ADB
+addons_adapters_label=Complemento de adaptadores de herramientas
 addons_adb_warning=Los dispositivos USB no serán detectados sin este complemento
 addons_status_unknown=?
 addons_status_installed=Instalado
@@ -71,3 +74,6 @@ status_valid=VALID
 status_warning=WARNINGS
 status_error=ERRORS
 status_unknown=UNKNOWN
+
+# Preferences
+devicepreferences_reset_default=Reiniciar al valor por defecto
