--- a/es-MX/toolkit/chrome/global/aboutTelemetry.properties
+++ b/es-MX/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,9 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Esta página muestra la información de rendimiento, hardware, uso y personalizaciones recopilada por Telemetry. Esta información se envía a %1$S para ayudar a mejorar %2$S.
 
+generalDataHeadingName = Nombre
+
+
 slowSqlMain = Sentencias SQL lentas en el hilo principal
 
 slowSqlOther = Sentencias SQL lentas en hilos auxiliares
@@ -46,7 +49,6 @@ enableTelemetry = Activar Telemetry
 
 keysHeader = Propiedad
 
-valuesHeader = Valor
 
 addonTableID = ID del complemento
 
