[es-MX] update from Pootle (mobile)

--- a/es-MX/mobile/android/chrome/browser.properties
+++ b/es-MX/mobile/android/chrome/browser.properties
@@ -391,3 +391,4 @@ feedHandler.subscribeWith=Subscribirse con\u0020
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
+nativeWindow.deprecated=%1$S está desaprobado. Por favor, usa %2$S en su lugar
