--- a/es-MX/mobile/overrides/appstrings.properties
+++ b/es-MX/mobile/overrides/appstrings.properties
@@ -31,5 +31,6 @@ externalProtocolChkMsg=Remember my choice for all links of this type.
 externalProtocolLaunchBtn=Ejecutar aplicación
 malwareBlocked=The site at %S has been reported as an attack site and has been blocked based on your security preferences.
 phishingBlocked=The website at %S has been reported as a web forgery designed to trick users into sharing personal or financial information.
+cspBlocked=Esta página tiene una política de seguridad de contenido que impide que pueda ser cargada de esta forma.
 corruptedContentError=La página que estás tratando de ver no se puede mostrar porque un error en la transferencia de datos fue detectado.
 remoteXUL=Esta página usa una tecnología no admitida que ya no está disponible por defecto en Firefox.
