[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/shellservice.properties
+++ b/xh/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = H
 setDefaultBrowserNever.label       = Ungaphindi undibuze
 setDefaultBrowserNever.accesskey   = U
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Ibhrawuza esisiseko
+setDefaultBrowserMessage=I%S ayisetwanga kungokunje njengebhrawuza esisiseko. Ungathanda ukuyenza ibhrawuza esisiseko?
+setDefaultBrowserDontAsk=Yiba soloko usenza olu qwalaselo xa uqalisa i-%S.
 
 desktopBackgroundLeafNameWin=Okungasemva Kolwazi Oluseskrinini.bmp
 DesktopBackgroundDownloading=Kugcinwa Umfanekiso…
