--- a/xh/security/manager/chrome/pippki/pippki.properties
+++ b/xh/security/manager/chrome/pippki/pippki.properties
@@ -55,15 +55,11 @@ clientAuthMessage2=Inikelwe Phantsi: kwe-"%S"
 pageInfo_NoEncryption=Umdibaniso Awunanguqulelo Entsonkothileyo
 pageInfo_Privacy_None2=Ulwazi oluthunyelwe ngeintanethi ngaphandle kokugqunywa lunokubonwa ngabanye abantu xa lusendleleni.
 pageInfo_Privacy_None3=Ikhasi olijongileyo alinaluguqulelo oluntsonkothileyo.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_Privacy_Strong1=Ikhasi olijongileyo belunoguqulelo oluntsonkothileyo phambi kokuthuthelwa Kunxibelelwano.
-pageInfo_Privacy_Strong2=Uguqulelo oluntsonkothileyo lwenza kube nzima kubantu abagunyazisiweyo ukujonga ulwazi xa behamba phakathi kweekhompyutha. Ngoko ke kusenokwenzeka ukuba kungabikho mntu ofunda eli khasi njengoko belihamba phakathi komsebenzi wothungelwano.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_Privacy_Weak2=Uguqulelo lwenqanaba elisezantsi lusenokuvumela abantu abathile abangagunyaziswanga ukuba bajonge olu lwazi.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=Ikhasi olijongileyo belunoguqulelo oluntsonkothileyo phambi kokuthuthelwa Kunxibelelwano.
 pageInfo_MixedContent=Umdibaniso Unoguqulelo Oluntsonkothileyo Olungaphelelanga
-pageInfo_Privacy_Mixed1=Iinxalenye zekhasi olijongileyo bezingenaluguqulelo luntsonkothileyo phambi kokuba zithuthelwe Kunxibelelwano.
 
 #Cert Viewer
 certDetails=Umbukeli Wesatifikethi:
