[xh] update from Pootle (firefox)

--- a/xh/dom/chrome/dom/dom.properties
+++ b/xh/dom/chrome/dom/dom.properties
@@ -210,3 +210,4 @@ KeyNameDeadKeysWarning=KeyboardEvent.key values starting with "Dead" azisebenzi 
 ImportXULIntoContentWarning=Ukuthunyelwa kweenowudi ze-XUL kuxwebhu lwesiqulatho kwaliwe. Le ndawo isenokushenxiswa kungekudala.
 XMLDocumentLoadPrincipalMismatch=Ukhuphelo lwamaxwebhu asuka kwezinye iifestile aluvumelekanga. Kuvumelekile ukunxibelelana kwi-Windows apho uxwebhu belenziwe khona kuphela.khuphela kolo xwebhu. Ngcono,sebenzisa XMLHttpRequest endaweni yoko.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=IndexedDB intengiselwano engakhange igqibeke iye yanqulunywa ngenxa yokufunisela iphepha.
