--- a/xh/toolkit/chrome/global/aboutSupport.properties
+++ b/xh/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,5 @@ webglRenderer = Umnikezeli we-WebGL
 minLibVersions = Inguqulelo encinane elindelekileyo
 loadedLibVersions = Inguqulelo esetyenziswayo
 
+hasSeccompBPF = Seccomp-BPF (System Call Filtering)
+canSandboxContent = Inkqubo yesiqulatho yebhokisi yesanti
