[xh] update from Pootle (firefox)

--- a/xh/toolkit/chrome/global/aboutSupport.properties
+++ b/xh/toolkit/chrome/global/aboutSupport.properties
@@ -85,3 +85,4 @@ loadedLibVersions = Inguqulelo esetyenziswayo
 
 hasSeccompBPF = Seccomp-BPF (System Call Filtering)
 canSandboxContent = Inkqubo yesiqulatho yebhokisi yesanti
+canSandboxMedia = Ukhuseleko olwahlula iinkqubo ezinesoftwe eyongeza ifitsha ethile yemidiya
