--- a/xh/toolkit/chrome/global/aboutTelemetry.properties
+++ b/xh/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Eli phepha libonisa inkcazelo engomsebenzi, isixhobo, ukusetyenzi
 
 generalDataHeadingName = Igama
 
+generalDataHeadingValue = Ixabiso
 
 slowSqlMain = Iingxelo ze-SQL ezicothayo kwithredi ephambili
 
@@ -49,6 +50,7 @@ enableTelemetry = IThelemetri enakho
 
 keysHeader = Ipropati
 
+valuesHeader = Ixabiso
 
 addonTableID = Isazisi sesongezelelo
 
