--- a/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,7 +99,11 @@ quit-button.tooltiptext.mac = Yeka %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Molo
+loop-call-button3.tooltiptext = Qala incoko
 
+social-share-button.label = Yabelana Ngeli Phepha
+social-share-button.tooltiptext = Yabelana ngeli phepha
 
 panic-button.label = Ulibele
 panic-button.tooltiptext = Ulibele imbali ethile yokubhrawuza
@@ -111,3 +115,4 @@ web-apps-button.tooltiptext = Fumana ii-Apps
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = I-WebIDE
+devtools-webide-button2.tooltiptext = Vula WebIDE (%S)
