--- a/xh/browser/chrome/browser/loop/loop.properties
+++ b/xh/browser/chrome/browser/loop/loop.properties
@@ -46,6 +46,7 @@ display_name_available_status=Iyafumaneka
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=Uxolo, asibanga nakho ukubuyisela unxibelelwano lwe URL.\u0020
 session_expired_error_description=Iseshini iphelelwe. Zonke ii- URLs ubuzenzile waze wabelana ngazo azokube ziphinde zisebenze.
 could_not_authenticate=Akungininiseki
 password_changed_question=Ingaba uyitshintshile iphasiwedi yakho?
@@ -97,6 +98,7 @@ new_contact_button=Abatsha Oqhagamshelana Nabo
 new_contact_name_placeholder=Igama
 new_contact_email_placeholder=Imeyili
 new_contact_fxos_phone_placeholder=Firefox OS Phone
+new_contact_phone_placeholder2=Umnxeba
 
 contacts_blocked_contacts=Abaqhagamshelwa abaThintelweyo
 
@@ -126,6 +128,8 @@ sync_contacts_button=Sayinka Abaqhagamsheli
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Uxolo, uqhagamshelo olungenayo aluphumelelanga
+import_failed_description_some=Abanye abanxibelelanisi akukwazanga ukubangenisa
+import_failed_support_button=Uncedo
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -283,6 +287,7 @@ feedback_rejoin_button=Phinda ujoyine
 ## an abusive user.
 feedback_report_user_button=Xela umsebenzisi
 
+help_label=Uncedo
 tour_label=Ukhenketho
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
@@ -300,6 +305,8 @@ rooms_list_delete_tooltip=Cima incoko
 rooms_list_deleteConfirmation_label=Uqinisekile?
 rooms_list_no_current_conversations=Akukho zincoko ngoku
 rooms_name_this_room_label=Thiya le ncoko
+rooms_name_this_room_tooltip2=Cofa ukukwenza izilungiso kwigama lencoko
+rooms_name_change_failed_label=Incoko ayikwazi ukunikwa elinye igama
 rooms_new_room_button_label=Qala incoko
 rooms_only_occupant_label=Ungowokuqala apha.
 rooms_panel_title=Khetha incoko okanye qalisa entsha
@@ -308,3 +315,4 @@ rooms_room_full_call_to_action_nonFx_label=Khuphela {{brandShortname}} ukuqalisa
 rooms_room_full_call_to_action_label=Funda ngakumbi malunga {{clientShortname}} »
 rooms_room_joined_label=Umntu othile ujoyine incoko!
 rooms_room_join_label=Incoko yelizwi
+rooms_signout_alert=Incoko eqhubekayo izakuvalwa
