--- a/xh/mobile/android/chrome/webcompatReporter.properties
+++ b/xh/mobile/android/chrome/webcompatReporter.properties
@@ -4,6 +4,9 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
+webcompat.menu.name=Xela imeko yesayithi
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
+webcompat.reportDesktopMode.message=Uxela imeko yesayithi?
+webcompat.reportDesktopModeYes.label=Ingxelo
