--- a/hy-AM/mobile/android/chrome/browser.properties
+++ b/hy-AM/mobile/android/chrome/browser.properties
@@ -391,3 +391,4 @@ feedHandler.subscribeWith=Բաժանորդագրվել
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
+nativeWindow.deprecated=%1$S-ի փոխարեն օգտագործեք %2$S-ը
