[sv-SE] update from Pootle (firefox)

--- a/sv-SE/toolkit/chrome/global/aboutSupport.properties
+++ b/sv-SE/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,4 @@ webglRenderer = WebGL-renderare
 minLibVersions = Förväntad minimiversion
 loadedLibVersions = Version som används
 
+hasSeccompBPF = Seccomp-BPF (Systemanropsfiltrering)
